--- a/src/assets/style/_variables.scss
+++ b/src/assets/style/_variables.scss
@@ -7,6 +7,7 @@ html {
 body {
   --bg-color: #ffffff;
   --bg-content-color: #f3f5f8;
+  // --bg-content-color: #ffffff;
   --bg-code: #fffbf3;
   --body-color: #444;
   --title-color: #111;
